@@ -1,0 +1,1 @@
+Синтаксис довольно сложный. Особенно с включением-выключением поведения. Надо упростить.
