@@ -1,0 +1,15 @@
+<?php
+return array(
+    'cherry'=>array(
+        'id' => 1,
+        'title'=>'Cherry',        
+    ),
+    'banana'=>array(
+        'id' => 2,
+        'title'=>'Banana',
+    ),
+    'apple'=>array(
+        'id' => 3,
+        'title'=>'Apple',
+    ),
+);
