@@ -1,2 +1,5 @@
+[*] Changed defaults from string to int.
+[+] Unit tests.
+
 0.1
 [+] Initial public release.
